# pico_hand_arm_teleop

./: .gitignore  init_repo.sh
docs/: protocol.md  rotation_debug.md  setup_guide.md
python_server/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
python_server/core/: __init__.py  arm_core.py  arm_teleop.py  hand_core.py  hardware_node.py  mapping_utils.py  pico_streamer.py  xr_client.py
python_server/tools/: __init__.py  test_hand_basic.py  test_hand_mapping.py  test_tianji_eef_485.py  test_xr_stream.py  test_xr_to_arm.py  test_xr_to_hand.py  test_xr_to_robot.py
scripts/: install_pico_env.sh
